[tool.poetry]
name = "fiberphotopy"
version = "0.2.3"
description = "Package for loading and processing fiber photometry data"
authors = ["kpuhger <krpuhger@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kpuhger/fiberphotopy"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5"
numpy = "^1.23"
scipy = "^1.9"
seaborn = "^0.12"
matplotlib = "^3.5"
"ruamel.yaml" = "^0.17.21"
PyYAML = "^6.0"
pingouin = "^0.5.2"
openpyxl = "^3.0.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10"
isort = "^5.10.1"
flake8 = "^6.0"
flake8-bugbear = "^22.9.11"
flake8-simplify = "^0.19.3"
flake8-comprehensions = "^3.10.1"
flake8-unused-arguments = "^0.0.11"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
mypy = "^0.991"
ipykernel = "^6.19.2"
pandas-stubs = "^1.5.2.221213"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
target-version = ['py310']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile="black"

[tool.mypy]
files = ["fiberphotopy"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "False"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    'tests'
]