[project]
name = "fiberphotopy"
version = "0.2.31"
description = "Package for loading and processing fiber photometry data"
authors = [{ name = "kpuhger", email = "krpuhger@gmail.com" }]
license = "MIT"
readme = "README.md"


dependencies = [
  "pandas",
  "notebook",
  "numpy",
  "scipy",
  "seaborn",
  "matplotlib",
  "ruamel.yaml",
  "PyYAML",
  "pingouin",
  "openpyxl",
  "notebook",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pre-commit", "ipykernel", "mkdocs", "mkdocs-material", "mkdocstrings"]

[project.urls]
repository = "https://github.com/kpuhger/fiberphotopy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO -sv --durations=0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pylint
  "PL",
  # isort
  "I",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-comprehensions
  "C4",
  # ruff
  "RUF",
]
fixable = ["ALL"]
ignore = [
  # too many arguments
  "PLR0913",
  # too many local variables
  "PLR0914",
  # too many positional arguments
  "PLR0917",
  # magic number
  "PLR2004",
  # line too long
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
