[metadata]
name = fiberphotopy
version = 0.0.36
author = Kyle P
description = Package for analyzing fiber photometry data
url = 
long_description = file: README.md
license_files = LICENSE.txt


[options]
package_dir = 
    = fiberphotopy
packages = find:
install_requires =
    pandas>=1.4.2
    numpy>=1.21.5
    statsmodels>=0.13.2
    matplotlib>=3.5.1
    seaborn>=0.11.2
    pingouin>=0.5.0
python_requires = >=3.8

[options.packages.find]
 where = fiberphotopy


[flake8]
ignore = E203, E302, E501, W503, C901
max-line-length = 88
per-file-ignores = __init__.py:F401
exclude = .venv/,tests/cases/*