[metadata]
name = fiberphotopy
version = 0.1.dev1
author = Kyle P
description = Package for analyzing fiber photometry data
url = https://github.com/kpuhger/fiberphotopy
long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = file: LICENSE.txt


[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pandas>=1.4.2
    numpy>=1.21.5
    statsmodels>=0.13.2
    matplotlib>=3.5.1
    seaborn>=0.11.2
    pingouin>=0.5.0
    pyyaml>=5
    ruamel-yaml>=0.15

[options.packages.find]
 where = fiberphotopy


[flake8]
ignore = E203, E302, E501, W503, C901
max-line-length = 88
per-file-ignores = __init__.py:F401
exclude = .venv/,tests/cases/*