[metadata]
name = fiberphotopy
version = 0.1.0
author = Kyle P
description = Package for analyzing fiber photometry data
url = https://github.com/kpuhger/fiberphotopy
long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = file: LICENSE.txt

[options]
package_dir =
    = fiberphotopy
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pandas
    numpy
    statsmodels
    matplotlib
    seaborn
    pingouin
    pyyaml
    ruamel-yaml

[options.packages.find]
 where = fiberphotopy

[flake8]
ignore = E203, E302, E501, W503, C901
max-line-length = 88
per-file-ignores = __init__.py:F401
exclude = .venv/,tests/cases/*